[COZY-366] feat: 일치율 존재하지 않을 시 null 처리, MemberStat, Room, Favorite 3개 사용 도메인 모두 수정 (#168)
* [COZY-366] feat: equality가 없다면, null로 리턴하기

* [COZY-366] fix: test 중 null처리